# eqr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/: FUNDING.yml
.github/workflows/: rust.yml
completions/: _eqr  _eqr.ps1  _qr  _qr.ps1  eqr.bash  eqr.elv  eqr.fish  qr.bash  qr.elv  qr.fish
man/: eqr.1  qr.1
src/: args.rs  error.rs  main.rs  promptpay.rs  run.rs  utils.rs
