[package]
name = "eqr"
version = "1.2.0"
authors = ["Marco Radocchia <marco.radocchia@outlook.com>", "github.com/pepa65 <pepa65@passchier.net>"]
edition = "2021"
rust-version = "1.62.0"
description = "Encode text into svg/png/jpg/terminal-format QR codes"
repository = "https://github.com/pepa65/eqr"
license = "GPL-3.0-only"
keywords = ["qr", "encode", "generator", "image", "terminal"]
categories = ["command-line-utilities", "computer-vision", "encoding"]

[[bin]]
name = "qr"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/{version}/qr"
pkg-fmt = "bin"
disabled-strategies = ["quick-install", "compile"]
target-family = "Linux"
target-arch = "X86_64"

[dependencies]
qrcodegen = { version = "1.8.0" }
clap = { version = "3.2.12", features = ["derive"] }
termcolor = { version = "1.1.3" }
dialoguer = { version = "0.10.1" }
regex = { version = "1.6.0" }
lazy_static = { version = "1.4.0" }
image = { version = "0.24.2" }
atty = { version = "0.2.14" }

[build-dependencies]
clap = { version = "3.2.12", features = ["derive"] }
clap_mangen = { version = "0.1.10" }
clap_complete = { version = "3.2.3" }
qrcodegen = { version = "1.8.0" }
lazy_static = { version = "1.4.0" }
regex = { version = "1.6.0" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
