[package]
name = "eqr"
version = "1.8.2"
edition = "2024"
authors = ["github.com/pepa65 <pepa65@passchier.net>", "Marco Radocchia <marco.radocchia@outlook.com>"]
description = "Encode text into svg/png/jpg/terminal-format QR codes with optional logo"
repository = "https://github.com/pepa65/eqr"
documentation = "https://docs.rs/eqr"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["qr", "encode", "generator", "image", "terminal"]
categories = ["command-line-utilities", "computer-vision", "encoding"]

[[bin]]
name = "qr"
path = "src/main.rs"

[[bin]]
name = "promptpay"
path = "src/promptpay.rs"

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/{version}/eqr.tgz"
pkg-fmt = "Tgz"
disabled-strategies = ["quick-install", "compile"]
target-family = "Linux"
target-arch = "X86_64"

[dependencies]
qrcodegen = "1.8.0"
clap = { version = "4.5.26", features = ["derive"] }
termcolor = "1.4.1"
dialoguer = "0.11.0"
regex = "1.11.1"
lazy_static = "1.5.0"
image = "0.25.5"
tempfile = "3.17.0"

[build-dependencies]
clap = { version = "4.5.26", features = ["derive"] }
clap_mangen = "0.2.26"
clap_complete = "4.5.42"
qrcodegen = "1.8.0"
lazy_static = "1.5.0"
regex = "1.11.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
